--- a/MyAsyncTaskLoaderDemo/app/src/main/AndroidManifest.xml
+++ b/MyAsyncTaskLoaderDemo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.zyandeep.broadcastreceiverdemo">
+    package="com.example.zyandeep.myasynctaskloaderdemo">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,19 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <receiver
-            android:name=".MyReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BATTERY_LOW" />
-                <action android:name="android.intent.action.AIRPLANE_MODE" />
-                <action android:name="com.example.zyandeep.broadcastreceiverdemo.myOwnBroadcastEvent" />
-            </intent-filter>
-
-        </receiver>
-
     </application>
 
 </manifest>
