--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.zyandeep.myproviderclient">
+    package="com.example.zyandeep.myapplication">
 
-    <uses-permission android:name="com.example.zyandeep.mycontentproviderapp.MY_ACCESS_CP" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 
     <application
