--- a/DetectHardware/app/src/main/AndroidManifest.xml
+++ b/DetectHardware/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_sos_launcher"
+        android:icon="@drawable/sos"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_sos_launcher"
+        android:roundIcon="@drawable/sos"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
